# coinpaprika-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  coinpaprika.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  coinpaprika.rockspec  coinpaprika_sdk.lua  coinpaprika_types.lua  config.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  (+4 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  coinpaprika_sdk.py  coinpaprika_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  control.py  error.py  operation.py  result.py
py/entity/: coin_entity.py  ticker_entity.py
py/feature/: audit_feature.py  base_feature.py  cache_feature.py  debug_feature.py  metrics_feature.py  proxy_feature.py  retry_feature.py  streaming_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_coin_direct.py  test_coin_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_ticker_direct.py  test_ticker_entity.py
py/utility/: done.py  feature_add.py  feature_init.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_response.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_method.py  prepare_params.py  prepare_query.py  transform_response.py
(+433 files in other folders)
